# SCOUT_BEACHHANDBALL

./: .gitattributes  .gitignore  APROVACAO_FASE_0_ONTOLOGIA_E_VOCABULARIO.md  ESPECIFICACAO_IMPLEMENTACAO_MVP.md  FECHAMENTO_TECNICO_FASE_1_BASE_ESTRUTURAL.md  MATRIZ_ACHADOS_FASE_0.md  MATRIZ_TESTES_FASE_1_BASE_ESTRUTURAL.md  MODELAGEM DO BANCO DE DADOS.md  MVP.md  ONTOLOGIA_SCOUT_HANDEBOL_AREIA_MVP.md  ORDEM_EXECUCAO_FASE_1.md  PLANO_EXECUCAO_IA_POR_FASES.md  PROBLEMA_FINAL.md  REVISAO_COMPLETA_PROBLEMA_FINAL_X_MVP.md  REVISAO_MODELAGEM_BANCO_X_FASE_1.md  REVISAO_MVP_X_ESPECIFICACAO_IMPLEMENTACAO.md  REVISAO_PROBLEMA_FINAL_X_MVP_v2.md  SCOUT_BEACHHANDBALL.code-workspace  SCOUT_BEACHHANDBALL.wsl.code-workspace  pyproject.toml  rasc.md  tetes.md  tstes2
.github/workflows/: validate-document-governance.yml
adr/: ADR-001-scout-roster-validation.md  ADR-002-backup-sqlite-wal.md  ADR-003-resultado-sets-shootout.md  ADR-004-video-opcional-e-ontologia-bloqueadora.md  ADR-005-cadastros-como-suporte-estrutural.md  ADR-006-definition-of-done-por-fase.md
docs/00_governanca/: CONTRATO_GOVERNANCA_DOCUMENTAL.md  ESQUEMA_METADADOS_DOCUMENTAIS.md  MAPA_DOCUMENTAL.md  PLANO_CONTRATO_ORGANIZACAO_DOCUMENTAL.md
docs/01_contexto/: PROBLEMA_FINAL.md
docs/02_produto/: MVP.md
docs/03_ontologia/: ONTOLOGIA_SCOUT_HANDEBOL_AREIA_MVP.md
fontes/: PRAXIOLOGIA.md
migrations/: 001_base_structural.sql
ontology/: CHANGELOG  README.md  prompt.md
scripts/: validate_document_governance.py  verify_phase0_freeze_hashes.py
tests/: test_phase0_contract.py  test_validate_document_governance.py
(+97 files in other folders)
